<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <!--年检代办流程-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commission_title3"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size23"
                />

            <ImageView
                android:id="@+id/pack_up_iv3"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/category_iv_oneitem_arrow_up" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/process_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/commission9"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size22"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/commission8"
                android:textColor="#808080"
                android:textSize="20sp"
                />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>
