<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    android:background="@color/gray">

    <!--<CheckBox-->
    <!--android:id="@+id/illegal_cb"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--/>-->
    <!--<ImageView-->
    <!--android:id="@+id/yuandian"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:src="@drawable/yuandian"-->
    <!--android:layout_marginTop="4dp"-->
    <!--/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <!--违章内容-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/illegal_reson_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/illegalContent"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/illegalContent_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <!--违章地点-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/cotv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/illegalAdd"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/illegalAdd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

        <!--违章时间-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/illegalTime"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/illegalTime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>


        <!--罚款金额-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/illegalmoney"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/illegalmoney_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <!--扣分情况-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/koufen"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/koufen_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <!--服务费用-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="服务费用："
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/shouxufei_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@color/red"
                android:textSize="18sp" />

        </LinearLayout>


        <!--服务费用-->
        <LinearLayout
            android:id="@+id/latefee_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="滞  纳  金："
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/latefee_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@color/red"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="right">

            <TextView
                android:id="@+id/page_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
